# PDP11

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_RU.md  compile.bat  compile.sh  compile_macos.sh  compile_windows.sh  setup_package.sh
.github/workflows/: release.yml
Docs/: PDP11 (Obsidian).md  PDP11 RU (Obsidian).md  PDP11 RU.md  PDP11.md  Program Descriptions RU.txt  Program Descriptions.txt
Programs/: 16-bit Adder and Subtractor.pdp  16-bit Integer Calculator.pdp  Bouncing Pixel.pdp  Hello World.pdp  Keyboard.pdp  Print.pdp  Program Descriptions RU.txt  Program Descriptions.txt  Rainbow Flag.pdp  Single-digit Adder.pdp  Stopwatch.pdp  Test 4.pdp  Yellow Dot.pdp
assets/: resources.qrc
assets/macos/: Info.plist.in  icon.icns
assets/macos/locales/en.lproj/: InfoPlist.strings
assets/macos/locales/ru.lproj/: InfoPlist.strings
src/: MainWindow.cpp  MainWindow.h  Pdp11.cpp  Pdp11.h  main.cpp
